Update validation, added validation based on the error list